--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <!--<groupId>com.eitraz</groupId>-->
+    <groupId>com.eitraz</groupId>
     <artifactId>eitraz-library</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -38,4 +38,11 @@
             <artifactId>awaitility</artifactId>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>maven-repository</id>
+            <url>https://raw.github.com/Eitraz/maven-repository/master/</url>
+        </repository>
+    </repositories>
 </project>
