--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,17 @@
     <parent>
         <groupId>com.eitraz</groupId>
         <artifactId>eitraz-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>[1.0,2.0)</version>
     </parent>
 
     <groupId>com.eitraz</groupId>
     <artifactId>eitraz-library</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+
+    <scm>
+        <developerConnection>scm:git:git@github.com:Eitraz/eitraz-library.git</developerConnection>
+    </scm>
 
     <dependencies>
         <!-- Log4j -->
