--- a/pom.xml
+++ b/pom.xml
@@ -5,17 +5,13 @@
     <parent>
         <groupId>com.eitraz</groupId>
         <artifactId>eitraz-parent</artifactId>
-        <version>[1.0,2.0)</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
 
     <groupId>com.eitraz</groupId>
     <artifactId>eitraz-library</artifactId>
     <version>1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-
-    <scm>
-        <developerConnection>scm:git:git@github.com:Eitraz/eitraz-library.git</developerConnection>
-    </scm>
 
     <dependencies>
         <!-- Log4j -->
@@ -29,24 +25,12 @@
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast</artifactId>
         </dependency>
-
-        <!-- JUnit -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
-
-        <!-- Awaitility -->
-        <dependency>
-            <groupId>com.jayway.awaitility</groupId>
-            <artifactId>awaitility</artifactId>
-        </dependency>
     </dependencies>
 
     <repositories>
         <repository>
-            <id>maven-repository</id>
-            <url>https://raw.github.com/Eitraz/maven-repository/master/</url>
+            <id>eitraz-repository</id>
+            <url>http://repository.eitraz.com</url>
         </repository>
     </repositories>
 </project>
