--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.eitraz</groupId>
         <artifactId>eitraz-parent</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>1.1-19</version>
     </parent>
 
     <groupId>com.eitraz</groupId>
